Update mobile ver

--- a/index.html
+++ b/index.html
@@ -331,8 +331,13 @@
           <div>
             <div class="container center-text">
             <span class="heading">RESUME</span>
-            <embed class="resume-pdf" src="/Resume.pdf" type="application/pdf"/>
-
+            <div class="resume-container">
+              <iframe
+                src="/Resume.pdf"
+                class="resume-pdf"
+                frameborder="0"
+              ></iframe>
+            </div>
           </div>
         </section>
       </div>
