--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <span class="number">03</span>
                 <div class="heading-skills">Data Visualisation</div>
                 <p class="skill-description">
-                  <strong>Tableau Certified Data Analyst</strong>, skilled in <strong>Power BI, Plotly</strong>.
+                  <strong>Tableau and Power BI Certified Data Analyst</strong>, skilled in <strong>Plotly</strong>.
                 </p>
                 <p class="skill-description">
                   Created high-impact dashboards with <strong>thousands of views</strong> on Tableau Public.
@@ -192,9 +192,13 @@
                 </p>
               </div>
     
-              <div class="skill-img-box">
+              <div class="skill-img-box-cert">
                 <img src="picture/Tableau Certified Data Analyst certificate.png"
-                class="skill-img"
+                class="skill-img-cert-1"
+                alt="skill-2"/>
+
+                <img src="picture/Microsoft DA certificate.png"
+                class="skill-img-cert-2"
                 alt="skill-2"/>
               </div>
     
